src/index.css
@import url("https://fonts.googleapis.com/css2?family=Inter:wght@200;400;500;600;700&family=Poppins:wght@400;500;600;700;900&family=Raleway:wght@400;500;600;700;900&family=Roboto:wght@400;500;700&display=swap");

* {
  padding: 0;
  margin: 0;
  box-sizing: border-box;
}

/* Box sizing rules */

*::before,
*::after {
  box-sizing: border-box;
}

/* Remove default margin */
body,
h1,
h2,
h3,
h4,
p,
figure,
blockquote,
dl,
dd {
  margin: 0;
}

/* Remove list styles on ul, ol elements with a list role, which suggests default styling will be removed */
ul[role="list"],
ol[role="list"] {
  list-style: none;
}

/* Set core body defaults */
html,
body {
  min-height: 100%;
  text-rendering: optimizeSpeed;
  line-height: 1.5;
}

/* A elements that don't have a class get default styles */
a:not([class]) {
  text-decoration-skip-ink: auto;
}

/* Make images easier to work with */
img:not(.thumbnail-new),
picture {
  max-width: 100%;
  display: block;
}

/* Inherit fonts for inputs and buttons */
input,
button,
textarea,
select {
  font: inherit;
}

/* Remove all animations, transitions and smooth scroll for people that prefer not to see them */
@media (prefers-reduced-motion: reduce) {
  html:focus-within {
    scroll-behavior: auto;
  }

  *,
  *::before,
  *::after {
    animation-duration: 0.01ms !important;
    animation-iteration-count: 1 !important;
    transition-duration: 0.01ms !important;
    scroll-behavior: auto !important;
  }
}

:root {
  /* Initializing color palettes */
  --primary: #222831;
  /* --secondary: #393e46; */
  --secondary: #262a2f;
  --tertiary: hsl(183, 100%, 45%);
  --text: #f6f6f6;
  --divider: #eeeeee;
  --menu-head: #cfc5c5;
  --highlight: #f96666;
  --text-base: hsla(0, 0%, 100%, 0.7);
  --playerHeight: 3.6875rem;
}

/* Custom ScrollBar */
::-webkit-scrollbar {
  /* width: 20px; */
  display: none;
}

.child-scroll::-webkit-scrollbar {
  width: 15px;
  display: block;
}

::-webkit-scrollbar-track {
  background-color: transparent;
}

::-webkit-scrollbar-thumb {
  background-color: #d6dee1;
  border-radius: 0px;
  border: 6px solid transparent;
  background-clip: content-box;
}

/* Custom Scrollbar End*/

body {
  background-color: var(--secondary);
  font-family: "Poppins", sans-serif;
}

.main-container {
  height: 100vh;
}

.content {
  margin: 0 18.5rem 0 14.5rem;
  padding-bottom: 3.5rem;
}

/* Sidebar Starts */
.left-sidebar,
.right-sidebar {
  background-color: var(--primary);
  color: var(--text);
  z-index: 29;
  height: calc(100% - var(--playerHeight));
}

.left-sidebar {
  position: fixed;
  top: 0;
  width: 14.5rem;
}

.left-sidebar:hover {
  overflow-y: scroll;
  width: calc(14.5rem + 15px);
}

.right-sidebar {
  position: fixed;
  top: 0;
  right: 0;
  width: 18.5rem;
}

.player {
  border-top: 1px solid var(--divider);
  background-color: var(--primary);
  z-index: 900;
  position: fixed;
  height: var(--playerHeight);
}

.logo {
  font-weight: 600;
  font-size: 1.5rem;
  margin: 2rem 20px;
}

.logo:hover *,
.logo:hover .logo__primary {
  color: var(--tertiary);
}

.active {
  color: var(--tertiary);
}

.hidden,
.play-featured.hidden {
  display: none;
}

.active .submenus .icons {
  color: var(--tertiary);
}

a {
  text-decoration: none;
  color: var(--text);
}

#home {
  display: flex;
  column-gap: 10px;
  justify-content: center;
}

.logo .logo__primary,
.logo__music,
.icons {
  color: var(--highlight);
}

.logo__music {
  font-size: 2.1rem;
}

/**************************/
.menu-list {
  margin: 0 2rem 0 3rem;
}

.menu-data {
  margin-top: 2rem;
}

.menu-list ul {
  list-style-type: none;
}

.menu-head {
  font-weight: 600;
  font-size: 0.75rem;
  text-transform: uppercase;
  color: #cfc5c5;
  margin-bottom: 1rem;
}

.icons {
  font-size: 1.3rem;
  vertical-align: middle;
}

.submenus {
  display: flex;
  column-gap: 0.8rem;
  align-items: center;
  margin-bottom: 0.75rem;
  cursor: pointer;
}

.submenus:hover {
  color: var(--tertiary);
}

.submenus:hover .icons {
  color: var(--tertiary);
}

.submenus .menu-text {
  font-size: 0.85rem;
}

.sidebar-right {
  padding: 0 30px 20px;
  position: relative;
}

.sidebar-title {
  margin: 20px 0;
  font-weight: 500;
  font-size: 1.25rem;
}

.genre {
  cursor: pointer;
  transition: transform 0.25s ease-in-out;
}

.genre:hover {
  transform: scale(1.05);
}

.genre-image img {
  width: 100%;
  height: 60px;
  border-radius: 10px;
}

.genre .genre-name {
  font-size: 0.7rem;
  text-align: center;
  margin-top: 5px;
}

.featured {
  position: relative;
  font-family: "Inter";
}

.featured .img {
  width: 100%;
  height: 50vh;
}

.featured .featured-img {
  width: 100%;
  height: 100%;
  object-fit: cover;
  border-radius: 7.63014px;
  user-select: none;
}

.image-section::after {
  position: absolute;
  content: "";
  height: 100%;
  width: 100%;
  top: 0;
  left: 0;
  border-radius: 7.63014px;
}

.featured .img::after {
  background: linear-gradient(
    to right,
    rgba(0, 0, 0, 0.5),
    rgba(0, 0, 0, 0.15)
  );
}

.custom-img::after {
  background: linear-gradient(to left, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.15));
}

.featured .details {
  position: absolute;
  min-width: 6.25rem;
  text-align: end;
  bottom: 25px;
  right: 20px;
  color: var(--text);
}

.featured .custom-details {
  position: absolute;
  min-width: 6.25rem;
  text-align: start;
  bottom: 25px;
  left: 20px;
  color: var(--text);
}

.details .title,
.custom-details .title {
  margin-bottom: 20px;
  text-transform: uppercase;
  font-weight: 700;
  font-size: 13.3527px;
  line-height: 16px;
}

.details .artists,
.custom-details .artists {
  font-weight: 300;
  font-size: 20px;
  line-height: 28px;
  letter-spacing: 0.1em;
}

.details .song-name,
.custom-details .song-name {
  font-weight: 700;
  font-size: 34px;
  line-height: 46px;
}
/* ... */

